--- a/3-handle-js/package.json
+++ b/3-handle-js/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
-    "babel-loader": "^10.0.0"
+    "babel-loader": "^10.0.0",
+    "eslint": "~8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-webpack-plugin": "~4.2.0"
   }
 }
